--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     
 
     <div class="aboutMe">
-        <p>莫锟绍，前端工程师，热爱 Web 开发。</p>
+        <p>无名氏，前端工程师，热爱 Web 开发。</p>
         <p>技能：前端开发，Rails 开发，Node.js 开发</p>
     </div>
 
